--- a/babyshop_zeta/package.json
+++ b/babyshop_zeta/package.json
@@ -4,12 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port=3000",
+    "dev": "vite --port=4000",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@heroicons/react": "^2.1.3",
+    "@material-tailwind/react": "^2.1.9",
+    "@mui/icons-material": "^5.15.17",
+    "@mui/material": "^5.15.17",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "node-sass": "^9.0.0",
@@ -22,6 +28,7 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
     "react-slick": "^0.30.2",
+    "recharts": "^2.12.7",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
